--- a/DataBase/idea.html
+++ b/DataBase/idea.html
@@ -1,1 +1,2 @@
-<!-- ila kan chi erreur fi database goloh kina chi7aja mahiyach wlah a3lam 😊 -->
+<!-- ila kan chi erreur fi database goloh liya kina chi7aja mahiyach wlah a3lam 😊 -->
+<!-- wla kant chi7aja nzidoha wla no9soha -->
