nav signup css db

--- a/DataBase/idea.html
+++ b/DataBase/idea.html
@@ -1,2 +1,1 @@
-<!-- ila kan chi erreur fi database goloh liya kina chi7aja mahiyach wlah a3lam 😊 -->
-<!-- wla kant chi7aja nzidoha wla no9soha -->
+<!-- ila kan chi erreur fi database goloh kina chi7aja mahiyach wlah a3lam 😊 -->
